# QtCMake

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp  resources.qrc
src/Gui/: MainWindow.qml
